@@ -11,6 +11,7 @@ drlmbin = usr/sbin/drlm
 drlm_store_svc = usr/sbin/drlm-stord
 drlm_api = usr/sbin/drlm-api
 drlm_proxy = usr/sbin/drlm-proxy
+drlm_send_error=usr/sbin/drlm-send-error
 name = drlm
 version := $(shell awk 'BEGIN { FS="=" } /VERSION=/ { print $$2 }' $(drlmbin))
 
@@ -86,6 +87,7 @@ clean:
 	rm -f packaging/docker/src/drlm*.deb
 	rm -f usr/sbin/drlm-api
 	rm -f usr/sbin/drlm-proxy
+	rm -f usr/sbin/drlm-send-error
 
 validate:
 	@echo -e "\033[1m== Validating scripts and configuration ==\033[0;0m"
@@ -162,6 +164,7 @@ install-bin:
 	install -Dp -m0755 $(drlm_store_svc) $(DESTDIR)$(sbindir)/drlm-stord
 	install -Dp -m0755 $(drlm_api) $(DESTDIR)$(sbindir)/drlm-api
 	install -Dp -m0755 $(drlm_proxy) $(DESTDIR)$(sbindir)/drlm-proxy
+	install -Dp -m0755 $(drlm_send_error) $(DESTDIR)$(sbindir)/drlm-send-error
 
 install-data:
 	@echo -e "\033[1m== Installing scripts ==\033[0;0m"
@@ -215,14 +218,22 @@ else
 	@echo -e "No Go binaries detected to build DRLM PROXY, will be copied the builded one"
 endif
 
-dist: clean validate drlmapi drlmproxy man rewrite $(name)-$(distversion).tar.gz restore
+drlmsenderror:
+ifneq ($(shell which go),)
+	@echo -e "\033[1m== Building DRLM SEND ERROR ==\033[0;0m"
+	go build -o ./usr/sbin/drlm-send-error ./usr/share/drlm/www/drlm-send-error/
+else
+	@echo -e "No Go binaries detected to build DRLM SEND ERROR, will be copied the builded one"
+endif
+
+dist: clean validate drlmapi drlmproxy drlmsenderror man rewrite $(name)-$(distversion).tar.gz restore
 
 $(name)-$(distversion).tar.gz:
 	@echo -e "\033[1m== Building archive $(name)-$(distversion) ==\033[0;0m"
 	git checkout $(git_branch)
 	git ls-tree -r --name-only --full-tree $(git_branch) | \
 		tar -czf $(name)-$(distversion).tar.gz --transform='s,^,$(name)-$(distversion)/,S' \
-		--files-from=- ./usr/sbin/drlm-api ./usr/share/drlm/www/drlm-api/drlm-api.go ./usr/sbin/drlm-proxy ./usr/share/drlm/www/drlm-proxy/drlm-proxy.go
+		--files-from=- ./usr/sbin/drlm-api ./usr/sbin/drlm-proxy ./usr/sbin/drlm-send-error
 
 rpm: dist
 	@echo -e "\033[1m== Building RPM package $(name)-$(distversion) ==\033[0;0m"
@@ -243,6 +254,7 @@ deb: dist
 	rm build-stamp
 	rm usr/sbin/drlm-api
 	rm usr/sbin/drlm-proxy
+	rm usr/sbin/drlm-send-error
 
 docker: dist
 	@echo -e "\033[1m== Building Docker image $(name)-$(distversion) ==\033[0;0m"
